# TP2

./: CMakeLists.txt  DataStorage.hpp  EventManager.hpp  Example.cpp  Example.hpp  Grupo_7-Projeto1-TP2-2025.1.txt  KWIC.cbp  KWIC.depend  KeyWordInContext.cpp  KeywordPrinter.hpp  LICENSE  README.md  StopWordFilter.hpp  data.txt  input.txt  main.cpp
KWIC/: GeradorPalavrasChave.cpp  GeradorPalavrasChave.h  KWIC.cbp  KWIC.depend  KWIC.layout  LeitorEntrada.cpp  LeitorEntrada.h  QuadroAvisos.cpp  QuadroAvisos.h  StringUtils.cpp  StringUtils.h  main.cpp
test/: CMakeLists.txt  ExampleTests.cpp  test_keyword.cpp
